<resources>
    <string name="about">À propos</string>
    <string name="about_contact">kaem.devmobile@gmail.com</string>
    <string name="about_content">L\'objectif de cette application est de permettre de prendre des notes (ex: études, cultes, réflexions, etc) de la manière la plus simple possible.</string>
    <string name="about_donate">&lt;a style="text-decoration:none;" href=http://paypal.me/kaemdevmobile>Faire un don&lt;/a></string>
    <string name="about_ref">Cette application a été réalisée avec l\'aide de l\'API &lt;a href=http://lsg.ibibles.net/>ibible.net&lt;/a></string>
    <string name="add">Ajouter</string>
    <string name="app_name">Notes</string>
    <string name="delete">Supprimer</string>
    <string name="deleteNoteValidation">Voulez-vous vraiment supprimer cette note ?</string>
    <string name="edit">Modifier</string>
    <string name="editNoteToolbarTitle">Modifier la note</string>
    <string name="no">Non</string>
    <string name="noteDeleted">La note à bien été supprimée</string>
    <string name="verse">\n\n%1$s\n%2$s\n\n</string>
    <string name="verseNotFound">Le verset n\'existe pas</string>
    <string name="wrongVerseParams">La saisie n\'est pas valide</string>
    <string name="yes">Oui</string>
    <string name="share">Partager</string>
    <string name="share_with">Partager via</string>
</resources>
