<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AboutActivity"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_title"
            android:text="@string/about"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_content"
            android:text="@string/about_content"
            android:justificationMode="inter_word"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_ref"
            android:text="@string/about_ref"
            android:justificationMode="inter_word"
            android:clickable="true"
            android:linksClickable="true"
            android:textColorLink="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_contact"
            android:text="@string/about_contact"
            android:justificationMode="inter_word"
            android:clickable="true"
            android:autoLink="email"
            android:linksClickable="true"
            android:textColorLink="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_donate"
            android:text="@string/about_donate"
            android:justificationMode="inter_word"
            android:clickable="true"
            android:linksClickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"/>

</LinearLayout>